--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
                     <main>
                     <section class="bg-green-100 w-3/4 mx-auto mt-8">
                     <h3 class="text-2xl mb-5 text-center">Please Login</h3>
-                    <!-- <form action="./index.html" method="post"> -->
+                    <!-- <form action="./banking.html" method="post"> -->
 
 <div class="mx-auto text-center">
 
-<input class=" block border-2 border-gray-400 rounded w-3/4 mb-4 px-2 mx-auto" type="email" placeholder="your email">
-<input class=" block border-2 border-gray-400 rounded w-3/4 mb-4 px-2 mx-auto" type="password" placeholder="type your password">
-<button class="bg-yellow-600 px-4 rounded py-2 text-white font-semibold mx-auto">Submit</button>
+<input id="user-email" class=" block border-2 border-gray-400 rounded w-3/4 mb-4 px-2 mx-auto" type="email" placeholder="your email">
+<input id="user-password" class=" block border-2 border-gray-400 rounded w-3/4 mb-4 px-2 mx-auto" type="password" placeholder="type your password">
+<button id="login-submit" class="bg-yellow-600 px-4 rounded py-2 text-white font-semibold mx-auto" target="_blank">Submit</button>
 </div>
                                                                       
                                                             <!-- </form> -->
@@ -31,5 +31,6 @@
                                         </section>
                                        
                     </main>
+                    <script src="/.assets/js/bank.js"></script>
 </body>
 </html>
