--- a/banking.html
+++ b/banking.html
@@ -10,13 +10,14 @@
 </head>
 <body>
 <header>
-<h1 class="text-5xl text-center mt-16 ">lets get some
+<h1 class="text-5xl text-center mt-8 ">lets get some
 <span class="font-semibold text-purple-600">Money</span>
 </h1>
 </header>
-<main>
+<main class="w-3/4 mx-auto">
+   <!-- balance and transaction -->
    <section class="mt-8">
-      <div class="grid grid-cols-1 gap-4 w-3/4 mx-auto sm:grid-cols-3">
+      <div class="grid grid-cols-1 gap-4  sm:grid-cols-3 shirk">
          <div class="bg-blue-400 p-8 rounded text-white">
             <h3 class="text-2xl">Deposite</h3>
             <h4 class="text-4xl">$$$</h4>
@@ -29,6 +30,30 @@
             <h3 class="text-2xl">Balance</h3>
             <h4 class="text-4xl">1240$$$</h4>
          </div>
+      </div>
+   </section>
+   <!-- Deposite and withdraw -->
+   <section class="mt-8">
+      <div class="grid grid-cols-1 gap-2 sm:grid-cols-2">
+         <div class="bg-blue-400 p-8 rounded">
+            <h3 class="text-3xl text-white ">please deposite</h3>
+            <div>
+
+               <input id="user-deposite" class=" border-2 border-gray-200 rounded w-3/4 mb-4 px-2" type="text" placeholder="$ please in put a ammount">
+               <button id="deposite-btn" class="bg-green-600 px-2 rounded py-2 text-white font-semibold mx-auto">Deposite</button>
+            </div>
+                                                                        
+         </div>
+         <div class="bg-yellow-600 p-8 rounded">
+            <h3 class="text-3xl text-white ">Withdraw balance</h3>
+            <div>
+
+               <input id="user-withdraw" class=" border-2 border-gray-200 rounded w-3/4 mb-4 px-2" type="text" placeholder="$ please in put a ammount">
+               <button id="withdraw-btn" class="bg-orange-600 px-2 rounded py-2 text-white font-semibold mx-auto">withdraw</button>
+            </div>
+                                                                        
+         </div>
+
       </div>
    </section>
 </main>
