deposite function create

--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
                                         </section>
                                        
                     </main>
-                    <script src="/.assets/js/bank.js"></script>
+                    <script src="./assets/js/login.js"></script>
 </body>
 </html>
