--- a/banking.html
+++ b/banking.html
@@ -20,7 +20,7 @@
       <div class="grid grid-cols-1 gap-4  sm:grid-cols-3 shirk">
          <div class="bg-blue-400 p-8 rounded text-white">
             <h3 class="text-2xl">Deposite</h3>
-            <h4 class="text-4xl">$$$</h4>
+            <h4  class="text-4xl"> $ <span id="deposite-total"></span></h4>
          </div>
          <div class="bg-red-800 p-8 rounded text-white">
             <h3 class="text-2xl">Withdraw</h3>
@@ -57,5 +57,7 @@
       </div>
    </section>
 </main>
+
+<script src="./assets/js/banking.js"></script>
 </body>
 </html>
