--- a/banking.html
+++ b/banking.html
@@ -20,15 +20,15 @@
       <div class="grid grid-cols-1 gap-4  sm:grid-cols-3 shirk">
          <div class="bg-blue-400 p-8 rounded text-white">
             <h3 class="text-2xl">Deposite</h3>
-            <h4  class="text-4xl"> $ <span id="deposite-total"></span></h4>
+            <h4  class="text-4xl"> $ <span id="deposite-total">00</span></h4>
          </div>
          <div class="bg-red-800 p-8 rounded text-white">
             <h3 class="text-2xl">Withdraw</h3>
-            <h4 class="text-4xl">$$$</h4>
+            <h4 class="text-4xl">$<span id="withdraw-total">00</span></h4>
          </div>
          <div class="bg-lime-600 p-8 rounded text-white">
             <h3 class="text-2xl">Balance</h3>
-            <h4 class="text-4xl">1240$$$</h4>
+            <h4 class="text-4xl">$ <span id="balance-total">1200</span></h4>
          </div>
       </div>
    </section>
